--- a/index.html
+++ b/index.html
@@ -289,30 +289,25 @@ $(document).ready(function () {
 
 <p><img src="avatar.jpg" style=width:40% class="img-circle"></p>
 <p><br></p>
-<div id="welcome-i-am-bevo-xv." class="section level1">
-<h1>Welcome! I am Bevo XV.</h1>
+<div id="hello-i-am-wenting-lu." class="section level1">
+<h1>HELLO! I am Wenting Lu.</h1>
 <p></br></p>
-<div
-id="i-weigh-almost-one-ton-and-my-horns-are-5-feet-long-from-tip-to-tip."
+<div id="i-am-a-junior-studying-actuarial-science."
 class="section level5">
-<h5>I weigh almost one ton and my horns are ~5 feet long from tip to
-tip.</h5>
+<h5>I am a Junior studying actuarial science.</h5>
 </div>
-<div id="i-enjoy-football-and-chewing-on-various-grasses."
+<div id="i-love-data-so-i-am-working-on-data-science-certificate."
 class="section level5">
-<h5>I enjoy football and chewing on various grasses.</h5>
+<h5>I love data, so I am working on Data Science Certificate.</h5>
 </div>
-<div
-id="i-do-not-like-the-uga-bulldog-and-i-do-not-hold-any-advanced-degrees."
+<div id="i-love-roadtrip-and-hiking-in-my-spare-time."
 class="section level5">
-<h5>I do not like the UGA Bulldog and I do not hold any advanced
-degrees.</h5>
+<h5>I love roadtrip and hiking in my spare time.</h5>
 </div>
-<div
-id="i-dont-have-any-data-related-projects-either-but-if-i-did-you-could-find-them-here"
+<div id="if-you-are-interested-in-my-projects-you-can-find-them-here"
 class="section level5">
-<h5>I don’t have any data-related projects either, but if I did you
-could find them <a href="/portfolio">here</a>!</h5>
+<h5>If you are interested in my projects, you can find them <a
+href="/portfolio">here</a>!</h5>
 <hr />
 </div>
 </div>
