--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="http://www.linkedin.com/in/wenting-lu-5325a322a">
+  <a href="https://www.linkedin.com/in/wenting-lu-5325a322a">
     <span class="fa fa-linkedin fa-lg"></span>
      
   </a>
